Update perfil Ex3

--- a/exercicios/Ex3/perfil.html
+++ b/exercicios/Ex3/perfil.html
@@ -21,7 +21,7 @@
         <div >
             <h1 class="text">Matheus Moretti</h1> 
             <div>
-                <p><a href="http://www.puc-campinas.edu.br/">Aula Anterior</a></p>
+                <p><a href="../Ex1-sem_formatacao/pagina1.html">Aula Anterior</a></p>
             </div>
             
         </div>
