ex 4 img ref corret

--- a/exercicios/Ex4/formulario.html
+++ b/exercicios/Ex4/formulario.html
@@ -112,13 +112,13 @@
             <tr>
                 <td class="td1">Rede Social</td>
                 <td class="td2">
-                    <img src="../imagens/face.png">  
+                    <img src="./imagens/face.png">  
                     http://facebook.com/ <input type="text" placeholder="Perfil facebook"><br>
-                    <img src="../imagens/linkedin.png">
+                    <img src="./imagens/linkedin.png">
                     http://linkedin.com/ <input type="text" placeholder="Perfil linkedin"><br>
-                    <img src="../imagens/twitter.png">
+                    <img src="./imagens/twitter.png">
                     http://twitter.com/ <input type="text" placeholder="Perfil twitter"><br>
-                    <img src="../imagens/skype.png">
+                    <img src="./imagens/skype.png">
                     <input type="text" placeholder="Perfil skype">
                 </td>
             </tr>
