tel and email valid

--- a/exercicios/Ex5_exerciciio_form_js/formulario.html
+++ b/exercicios/Ex5_exerciciio_form_js/formulario.html
@@ -19,19 +19,19 @@
         <table>
             <h3>1. Dados Pessoais</h3>
 
-            <!--Linha 1-->
+            <!--Linha 1 NOME-->
             <tr>
                 <td class="td1">Nome</td>
                 <td class="td2"><input type="text" name="nome" required placeholder="Digite seu nome" class="in1"/></td>
             </tr>
 
-            <!--Linha 2-->
+            <!--Linha 2 DATA NASCIMENTO-->
             <tr>
                 <td class="td1">Data de Nascimento</td>
                 <td class="td2"><input type="date" name="data_nascimento" class="in1"/></td>
             </tr>
 
-            <!--Linha 3-->
+            <!--Linha 3 ESTADO CIVIL-->
             <tr>
                 <td class="td1">Estado Civil</td>
                 <td class="td2" >
@@ -47,7 +47,7 @@
                 </td>
             </tr>
 
-            <!--Linha 4-->
+            <!--Linha 4 SEXO-->
             <tr>
                 <td class="td1">Sexo</td>
                 <td class="td2">
@@ -70,13 +70,13 @@
         <table>
             <h3>3. Contato</h3>
 
-            <!--Linha 1-->
+            <!--Linha 1 ENDEREÇO-->
             <tr>
                 <td class="td1">Endereço</td>
                 <td class="td2"><input type="text" required placeholder="Digite seu endereço" class="in1"></td>
             </tr>
 
-            <!--Linha 2-->
+            <!--Linha 2 CID/EST-->
             <tr>
                 <td class="td1">Cidade/Estado</td>
                 <td class="td2">
@@ -85,7 +85,7 @@
                 </td>
             </tr>
 
-            <!--Linha 3-->
+            <!--Linha 3 CEP-->
             <tr>
                 <td class="td1">CEP</td>
                 <td class="td2"><input type="text" required placeholder="Digite seu CEP no formato 99999-999"
