--- a/exercicios/06_exercicio_bootstrap/index.html
+++ b/exercicios/06_exercicio_bootstrap/index.html
@@ -198,8 +198,8 @@
     <!-- fim do quem sou -->
 
     <!-- inicio footer -->
-        <footer class="text-light text-center bg-dark">
-            <p>Desenvolvido por Matheus Moretti</p>
+        <footer class="text-light text-center  font-weight-bold bg-dark">
+            <p>&copy; Desenvolvido por Matheus Moretti</p>
         </footer>
     <!-- fim do footer -->
 
